@@ -3,6 +3,8 @@
 changes relative to sbcl-1.3.7:
   * enhancement: simple arrays of any rank can be stack-allocated
     on platforms supporting stack allocation of vectors.
+  * optimization: improved type derivation for FIND, POSITION, COUNT, SEARCH,
+    MISMATCH.
 
 changes in sbcl-1.3.7 relative to sbcl-1.3.6:
   * bug fix: preserve the name of the destructive function for the destroyed
